Fix navbar position on mobile

--- a/app/components/navbar/_navbar.styl
+++ b/app/components/navbar/_navbar.styl
@@ -57,8 +57,10 @@ nav
 
 
     &.right
-      right 0.5rem
       padding 0
+      +above($medium-screen)
+        right 0.5rem
+
 
   // Navbar Links
   ul
